--- a/www/index.html
+++ b/www/index.html
@@ -15,15 +15,15 @@
             <div class="col-md-3 text-center">
                 <img src="https://avatars2.githubusercontent.com/u/10599101?s=460&v=4" alt="" class="img-fluid rounded-circle" style="width: 20vh;" srcset="">
                 <br><br>
-                <h3><b>Vrijraj Singh</b></h3>
-                <p class="text-muted">Rajasthan, India</p>
+                <h3><b>Manish Sharma</b></h3>
+                <p class="text-muted">Jaipur,Rajasthan, India</p>
             </div>
             <div class="col-md-9 col-12">
                 <h1 style="font-weight: 350;color: #3c4043;" class="display-5"><b>Hello World!..</b></h1>
                 <h4><b>This is my Website</b></h4>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi vel reprehenderit dolor expedita enim accusantium maiores neque commodi reiciendis? Suscipit neque explicabo ab odio! In pariatur quasi aliquid nesciunt quae.</p>
 
-                <a href="mailto:vrijraj2396@gmail.com" class="btn btn-pink m-0 btn-md"><i class="fa fa-check" aria-hidden="true"></i>&nbsp; YES, I'M AVAILABLE FOR HIRE</a>
+                <a href="mailto:manishsharma00014@gmail.com" class="btn btn-pink m-0 btn-md"><i class="fa fa-check" aria-hidden="true"></i>&nbsp; YES, I'M AVAILABLE FOR HIRE</a>
                 <br><br><br>
          
                 <h5><b>Technical Skills</b></h5>
