--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <div class="container mt-5 align-items-center">
         <div class="row align-items-center">
             <div class="col-md-3 text-center">
-                <img src="https://avatars2.githubusercontent.com/u/10599101?s=460&v=4" alt="" class="img-fluid rounded-circle" style="width: 20vh;" srcset="">
+                <img src="https://avatars2.githubusercontent.com/u/45693433?s=400&u=185b6556115152b00bcdae0a78211bc73afd9341&v=4" alt="" class="img-fluid rounded-circle" style="width: 20vh;" srcset="">
                 <br><br>
                 <h3><b>Manish Sharma</b></h3>
                 <p class="text-muted">Jaipur,Rajasthan, India</p>
