--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
                     </a>        
                 </div>
                 <br><br>
-                <p>Designed and Developed By <b><a href="https://codingurukul.com" style="color:#3c4043" target="_blank">Coding Gurukul</a></b></p>
+                <p>Designed and Developed By <b><a href="https://mywebsite.com" style="color:#3c4043" target="_blank">Manish Sharma</a></b></p>
 
             </div>
         </div>
